CHATS_SIT/force-app/main/default/objects/T_APPLN_INDIV__c.object
<CustomObject>
    <description>PEAK application individual(s)</description>
  <!--  <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>CBMS_DENIAL_REASON__c</fullName>
        <label>CBMS_DENIAL_REASON</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROADMAP_CORR_ID__c</fullName>
        <label>ROADMAP_CORR_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_GENDER__c</fullName>
        <description>Gender</description>
        <label>Gender</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_INFO_CS__c</fullName>
        <description>CDE_INFO_CS</description>
        <label>CDE_INFO_CS</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_LEVEL_GRADE_HGHST__c</fullName>
        <description>CDE_LEVEL_GRADE_HGHST</description>
        <label>CDE_LEVEL_GRADE_HGHST</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_CITIZEN__c</fullName>
        <label>CDE_SOURCE_VRFYD_CITIZEN</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS_MAR__c</fullName>
        <description>CDE_STATUS_MAR</description>
        <label>CDE_STATUS_MAR</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS_MIL__c</fullName>
        <description>CDE_STATUS_MIL</description>
        <label>CDE_STATUS_MIL</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_VRFYD_CITIZEN__c</fullName>
        <label>CDE_VRFYD_CITIZEN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_OUT_HOUSE__c</fullName>
        <description>DTE_BEGIN_OUT_HOUSE</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_BEGIN_OUT_HOUSE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_DOB__c</fullName>
        <description>DTE_DOB</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_Death__c</fullName>
        <description>Date of Death</description>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <label>IDN_APPLN_INDIV</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_APPLN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IDN_APPLN</description>
        <label>IDN_APPLN</label>
        <referenceTo>T_APPLN_CASE__c</referenceTo>
        <relationshipLabel>Application Individual</relationshipLabel>
        <relationshipName>Application_case_16</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CBMS_CLIENT__c</fullName>
        <label>IDN_CBMS_CLIENT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <description>IDN_CLIENT</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>IDN_CLIENT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_SEQ_INDIV__c</fullName>
        <description>IDN_SEQ_INDIV</description>
        <label>IDN_SEQ_INDIV</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_STATE_PEAK__c</fullName>
        <description>IDN_STATE_PEAK</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>IDN_STATE_PEAK</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_STATE__c</fullName>
        <description>State ID</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>State ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_APPLICANT__c</fullName>
        <description>IND_APPLICANT</description>
        <label>IND_APPLICANT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CRTKR_PRIM__c</fullName>
        <label>Primary Caretaker</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CTZN__c</fullName>
        <description>IND_CTZN</description>
        <label>IND_CTZN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_INCLUDE__c</fullName>
        <description>IND_INCLUDE</description>
        <label>IND_INCLUDE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_IPV__c</fullName>
        <label>IND_IPV</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_OUT_HOUSE__c</fullName>
        <description>IND_OUT_HOUSE</description>
        <label>IND_OUT_HOUSE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST_OTHER__c</fullName>
        <description>NAM_FIRST_OTHER</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_FIRST_OTHER</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST__c</fullName>
        <description>First Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST_OTHER__c</fullName>
        <description>NAM_LAST_OTHER</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_LAST_OTHER</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST__c</fullName>
        <description>Last Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_MI_OTHER__c</fullName>
        <description>NAM_MI_OTHER</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_MI_OTHER</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_MI__c</fullName>
        <description>MI</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>MI</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_SSN__c</fullName>
        <description>SSN</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXT_SNDX__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Soundex Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_NOTIF_SIDMOD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified to SIDMOD</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Individual</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IDN_STATE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN__c</columns>
        <columns>IDN_STATE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AINDIV-{0}</displayFormat>
        <label>Application Individual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>