CHATS_SIT/force-app/main/default/objects/T_APPLN_INDIV__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>IDN_APPLN__c</columns>
    <columns>IDN_STATE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>